# itesol

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE.txt  README.md  build.py  example.py  main.cpp  pyproject.toml
.github/workflows/: ci.yml
cmake/: FindSphinx.cmake
docs/: CMakeLists.txt  conf.py  index.rst
include/itesol/: concepts.hpp  eigen.hpp  type_traits.hpp
include/itesol/algorithms/: power_method.hpp  wielandt_deflation.hpp
include/itesol/algorithms/power_method/: observer.hpp  power_method.hpp  quiet_observer.hpp  verbose_observer.hpp
include/itesol/backends/: blas.hpp  concept.hpp  eigen_dense.hpp
include/itesol/observers/single_eigenvalue/: base.hpp  quiet.hpp  verbose.hpp
include/itesol/test_matrices/: random_symmetric.hpp
itesol/: eigen.hpp  power_method.hpp
itesol/algorithms/power_method/: power_method.hpp
itesol/backends/: concept.hpp  eigen_dense.hpp
python/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  concepts.cpp  type_traits.cpp
tests/algorithms/: power_method.cpp
tests/backends/: blas.cpp  eigen_dense.cpp
tests/test_matrices/: random_symmetric.cpp
